add both 0.1% and 1% cutoff of group M amino acid mutations for entropy and subtype chi-square test calculation

--- a/08_position_subtype_HLA/0.1%/Position_regression.html
+++ b/08_position_subtype_HLA/0.1%/Position_regression.html
@@ -366,7 +366,7 @@ pre code {
 </div>
 
 
-<p>Report generated at: 03/15/2023 04:19 PM PDT</p>
+<p>Report generated at: 03/15/2023 07:02 PM PDT</p>
 <div id="meaning-of-correlation_data.csv" class="section level2">
 <h2>Meaning of correlation_data.csv</h2>
 <ul>
@@ -376,65 +376,25 @@ pre code {
 subtypes and mutations &gt;= 0.1% in any subtype.
 <ul>
 <li>Subtype Chi-square</li>
-<li>Subtype Chi-square rank: Subtype chi-square rank number</li>
 </ul></li>
 <li>HLA References: Number of HLA References</li>
 </ul>
-</div>
-<div id="subtype-chi-square-test-rank-and-hla-reference-regression" class="section level2">
-<h2>Subtype chi-square test rank and #HLA Reference, regression</h2>
-<pre><code>## 
-## Call:
-## lm(formula = Entropy ~ subtype_rank + HLA, data = df)
-## 
-## Residuals:
-##      Min       1Q   Median       3Q      Max 
-## -0.49054 -0.12676  0.05899  0.05899  1.08086 
-## 
-## Coefficients:
-##                Estimate Std. Error t value Pr(&gt;|t|)    
-## (Intercept)  -0.0649727  0.0179847  -3.613 0.000373 ***
-## subtype_rank  0.0059825  0.0004743  12.614  &lt; 2e-16 ***
-## HLA           0.0695970  0.0105914   6.571 3.35e-10 ***
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
-## 
-## Residual standard error: 0.2075 on 228 degrees of freedom
-## Multiple R-squared:  0.7414, Adjusted R-squared:  0.7391 
-## F-statistic: 326.8 on 2 and 228 DF,  p-value: &lt; 2.2e-16</code></pre>
-<pre><code>##                     2.5 %       97.5 %
-## (Intercept)  -0.100410075 -0.029535301
-## subtype_rank  0.005047985  0.006917091
-## HLA           0.048727501  0.090466598</code></pre>
-</div>
-<div id="subtype-chi-square-test-rank-and-hla-reference-with-interaction-regression" class="section level2">
-<h2>Subtype chi-square test rank and #HLA Reference with interaction,
-regression</h2>
-<pre><code>## 
-## Call:
-## lm(formula = Entropy ~ subtype_rank * HLA, data = df)
-## 
-## Residuals:
-##      Min       1Q   Median       3Q      Max 
-## -0.49577 -0.06789  0.02419  0.02419  1.05375 
-## 
-## Coefficients:
-##                    Estimate Std. Error t value Pr(&gt;|t|)    
-## (Intercept)      -0.0290519  0.0157400  -1.846   0.0662 .  
-## subtype_rank      0.0048617  0.0004199  11.578  &lt; 2e-16 ***
-## HLA              -0.1266590  0.0226494  -5.592 6.42e-08 ***
-## subtype_rank:HLA  0.0022689  0.0002403   9.441  &lt; 2e-16 ***
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
-## 
-## Residual standard error: 0.1763 on 227 degrees of freedom
-## Multiple R-squared:  0.8143, Adjusted R-squared:  0.8119 
-## F-statistic: 331.8 on 3 and 227 DF,  p-value: &lt; 2.2e-16</code></pre>
-<pre><code>##                         2.5 %       97.5 %
-## (Intercept)      -0.060067012  0.001963226
-## subtype_rank      0.004034310  0.005689167
-## HLA              -0.171288986 -0.082028922
-## subtype_rank:HLA  0.001795338  0.002742393</code></pre>
+<!-- ## Subtype chi-square test rank and #HLA Reference, regression -->
+<!-- ```{r sct-rank-hla} -->
+<!-- df = read.csv('correlation_data.csv') %>% mutate(subtype_rank=Subtype.Chi.square_rank, HLA=HLA.References) -->
+<!-- model = lm(Entropy ~ subtype_rank + HLA, data=df) -->
+<!-- summary(model) -->
+<!-- confint(model) -->
+<!-- # ggPredict(model,se=TRUE,interactive=TRUE) -->
+<!-- ``` -->
+<!-- ## Subtype chi-square test rank and #HLA Reference with interaction, regression -->
+<!-- ```{r sct-rank-hla-inter} -->
+<!-- df = read.csv('correlation_data.csv') %>% mutate(subtype_rank=Subtype.Chi.square_rank, HLA=HLA.References) -->
+<!-- model = lm(Entropy ~ subtype_rank * HLA, data=df) -->
+<!-- summary(model) -->
+<!-- confint(model) -->
+<!-- # ggPredict(model,se=TRUE,interactive=TRUE) -->
+<!-- ``` -->
 </div>
 <div id="subtype-chi-square-test-and-hla-reference-rfit" class="section level2">
 <h2>Subtype chi-square test and #HLA Reference, Rfit</h2>
@@ -442,15 +402,15 @@ regression</h2>
 ## rfit.default(formula = Entropy ~ subtype + HLA, data = df)
 ## 
 ## Coefficients:
-##                Estimate  Std. Error t.value p.value    
-## (Intercept) -1.3149e-16  1.0396e-03   0.000       1    
-## subtype      6.2657e-05  5.1691e-07 121.213  &lt;2e-16 ***
-## HLA          7.6844e-02  1.1701e-03  65.673  &lt;2e-16 ***
+##               Estimate Std. Error t.value p.value    
+## (Intercept) 2.8361e-02 1.2911e-02  2.1967 0.02993 *  
+## subtype     5.9898e-05 2.2199e-06 26.9826 &lt; 2e-16 ***
+## HLA         7.2498e-02 5.4087e-03 13.4040 &lt; 2e-16 ***
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
-## Multiple R-squared (Robust): 0.9305885 
-## Reduction in Dispersion Test: 1528.378 p-value: 0</code></pre>
+## Multiple R-squared (Robust): 0.807116 
+## Reduction in Dispersion Test: 255.2523 p-value: 0</code></pre>
 <pre><code>##             2.5 % 97.5 %
 ## (Intercept)    NA     NA
 ## subtype        NA     NA
@@ -497,16 +457,16 @@ Rfit</h2>
 ## rfit.default(formula = Entropy ~ subtype * HLA, data = df)
 ## 
 ## Coefficients:
-##                Estimate  Std. Error t.value p.value    
-## (Intercept) -5.8438e-17  1.1320e-03   0.000       1    
-## subtype      7.2222e-05  7.7067e-07  93.713  &lt;2e-16 ***
-## HLA          7.8699e-02  1.3823e-03  56.933  &lt;2e-16 ***
-## subtype:HLA -2.9140e-06  2.1971e-07 -13.263  &lt;2e-16 ***
+##                Estimate  Std. Error t.value   p.value    
+## (Intercept)  2.5544e-02  1.2673e-02  2.0156  0.046055 *  
+## subtype      6.8752e-05  3.1974e-06 21.5028 &lt; 2.2e-16 ***
+## HLA          7.7168e-02  6.1905e-03 12.4656 &lt; 2.2e-16 ***
+## subtype:HLA -2.5330e-06  9.0434e-07 -2.8009  0.005935 ** 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
-## Multiple R-squared (Robust): 0.9320679 
-## Reduction in Dispersion Test: 1038.191 p-value: 0</code></pre>
+## Multiple R-squared (Robust): 0.8217689 
+## Reduction in Dispersion Test: 185.9646 p-value: 0</code></pre>
 <pre><code>##             2.5 % 97.5 %
 ## (Intercept)    NA     NA
 ## subtype        NA     NA
